# pumasimbot

./: .gitignore  CMakeLists.txt  build.sh  readme.MD  start.sh  start_planning.sh  tcpCLIPS60.cmake
data/: .gitignore  bug.raw  bug.top  bug.wrl  empty.raw  empty.wrl  empty_1.raw  final.raw  final.wrl  final_doors.wrl  obstacle.raw  obstacle.top  obstacle.wrl  random.wrl  random_1.ord  random_1.raw  random_1.wrl  random_10.raw  random_10.wrl  random_11.raw  random_11.wrl  random_12.raw  random_12.wrl  random_13.raw  random_13.wrl  random_14.raw  random_14.top  random_14.wrl  random_2.raw  random_2.wrl  random_3.raw  random_3.wrl  random_4.raw  random_4.wrl  random_5.raw  random_5.wrl  random_6.raw  random_6.wrl  random_7.raw  random_7.wrl  (+46 more)
src/: .gitignore
src/Dijkstra/: CMakeLists.txt  Dijkstra.cpp
src/action_planner/: .gitignore  CMakeLists.txt  action_planner.h
src/action_planner/ViRBot_Planning_Sockets/: planning.clp
src/behaviors/: .gitignore  clipsclient.h  clipsstatus.h  oracle.clp  oracle.h  reply.h  request.h
src/expert_system/: .gitignore  CMakeLists.txt  oracle.clp  readme.MD
src/expert_system/ViRBot_Planning_Sockets/: exe_plan.clp  objects_deftemplates.clp  sockets_clips.clp  virbot_initial_state.clp  virbot_initial_state.txt
src/gui/: .gitignore  CMakeLists.txt  initial_behaviors.py  pumasimbot.py  whereami.py
src/motion_planner/: CMakeLists.txt  GoTo_State_Machine.cpp
src/state_machines/: dfs.h  dijkstra.h  nodes.h  reactive_behavior.h  state_machine_avoidance.h  state_machine_avoidance_destination.h  state_machine_destination.h  state_machine_student.h
src/utilities/: constants.h  inputs.h  structures.h  utilities.h
